<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="190dp"
    android:paddingLeft="3dp"
    android:paddingRight="3dp">

    <FrameLayout
        android:id="@+id/login_button_google_frame"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/selector_button3">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_popup_share_msg_n"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/color_black"
            android:text="@string/member_login_button_gmail"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/login_button_kakao_frame"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_button3">

        <com.kakao.usermgmt.LoginButton
            android:id="@+id/login_button_kakao"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_popup_share_01_n"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/color_black"
            android:text="@string/member_login_button_kakao"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/login_button_facebook_frame"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_button3">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_facebook"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_popup_share_04_n"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/color_black"
            android:text="@string/member_login_button_facebook"/>

    </FrameLayout>

</LinearLayout>